--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
-    "openai": "^2.0.2"
+    "openai": "^2.0.2",
+    "puppeteer": "^13.1.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
